jellyfin: add start/stop/restart recipes

--- a/jellyfin/Makefile
+++ b/jellyfin/Makefile
@@ -1,5 +1,13 @@
-jellyfin:
-	sudo cp -d /etc/containers/systemd jellyfin/*
+install:
+	sudo cp -d /etc/containers/systemd jellyfin.*
 	sudo /usr/lib/systemd/system-generators/podman-system-generator
 	sudo systemctl daemon-reload
+
+start:
 	sudo systemctl start jellyfin
+
+stop:
+	sudo systemctl stop jellyfin
+
+restart:
+	sudo systemctl restart jellyfin
