jellyfin: fix install recipe

--- a/jellyfin/Makefile
+++ b/jellyfin/Makefile
@@ -1,5 +1,5 @@
 install:
-	sudo cp -d /etc/containers/systemd jellyfin.*
+	sudo cp -t /etc/containers/systemd jellyfin.*
 	sudo /usr/lib/systemd/system-generators/podman-system-generator
 	sudo systemctl daemon-reload
 
