--- a/jellyfin/jellyfin.yaml
+++ b/jellyfin/jellyfin.yaml
@@ -1,5 +1,19 @@
 ---
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: media-filebrowser-config
+data:
+  config.yaml: |
+    server:
+      database: /data/filebrowser.db
+      sources:
+        - name: media
+          path: /srv
+          config:
+            defaultEnabled: true
+---
+apiVersion: v1
 kind: Pod
 metadata:
   name: media
@@ -34,28 +48,34 @@ spec:
           name: shared-data-pvc
 
     - name: filebrowser
-      image: docker.io/filebrowser/filebrowser:v2
+      image: ghcr.io/gtsteffaniak/filebrowser:stable-slim
       env:
-        - name: FB_PORT
-          value: 8080
+        - name: FILEBROWSER_CONFIG
+          value: /config/config.yaml
       ports:
-        - containerPort: 8080
+        - containerPort: 80
           hostPort: 8080
       volumeMounts:
         - mountPath: /srv
           name: shared-data-pvc
-        - mountPath: /database
-          name: filebrowser-database-pvc
+        - mountPath: /data
+          name: filebrowser-data-pvc
+        - mountPath: /config
+          name: filebrowser-config
 
   volumes:
     - name: shared-data-pvc
-      PersistentVolumeClaim:
+      persistentVolumeClaim:
         claimName: media-shared-data
 
     - name: jellyfin-config-pvc
-      PersistentVolumeClaim:
+      persistentVolumeClaim:
         claimName: media-jellyfin-config
 
-    - name: filebrowser-database-pvc
-      PersistentVolumeClaim:
-        claimName: media-filebrowser-database
+    - name: filebrowser-data-pvc
+      persistentVolumeClaim:
+        claimName: media-filebrowser-data
+
+    - name: filebrowser-config
+      configMap:
+        name: media-filebrowser-config
